# redactor

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
redactor/: main.py  requirements.txt  setup.py  utilities.py
redactor/templates/: base.html  framed.html  index.html  redaction.html  workspace.html
